# SL

./: .gitignore  CMakeLists.txt  README.md
examples/: 00-hello-world.SL  00-include.SL
src/: sl.c  slc.c
src/SL/: SL.h  arena.c  macros.h  memory.h  string.c  types.h  vector.c
test/: CMakeLists.txt
test/SL/: CMakeLists.txt  tester.c
